--- a/src/app/pages/ingredient-purchase/ingredient-purchase.component.html
+++ b/src/app/pages/ingredient-purchase/ingredient-purchase.component.html
@@ -82,7 +82,8 @@
           </div>
           <div class="col col-md-6 text-right">
             <button mat-flat-button color="primary"
-              style="height: 100px;width: 200px;background-color: #58AD6A;font-size: 18px;">Pay</button>
+              style="height: 100px;width: 200px;background-color: #58AD6A;font-size: 18px;"
+              (click)="savePurchase()">Pay</button>
           </div>
         </div>
       </div>
