--- a/src/app/dialogs/ingredient-take-off/ingredient-take-off.component.html
+++ b/src/app/dialogs/ingredient-take-off/ingredient-take-off.component.html
@@ -4,29 +4,36 @@
 <hr>
 <form [formGroup]="purchaseForm">
   <div class="form-row">
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-3">
       <label class="changeHistoryId">ປະເພດ</label>
       <select class="form-control" id="changeHistoryId" disabled formControlName="changeHistoryId">
         <option value="" disabled>-- Choose --</option>
         <option value="{{ s.id }}" *ngFor="let s of ingredientStockChangeTypes">{{ s.changeName }}</option>
       </select>
     </div>
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-3">
       <label class="usedQuantity">ຈຳນວນ</label>
       <input type="number" class="form-control text-right" formControlName="usedQuantity" required>
     </div>
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-3">
       <label class="unitId">ຫົວໜ່ວຍ</label>
       <select class="form-control" id="unitId" disabled formControlName="unitId">
         <option value="" disabled>-- Choose --</option>
         <option value="{{ u.id }}" *ngFor="let u of units">{{ u.unit_name }}</option>
       </select>
     </div>
+    <div class="form-group col-md-3">
+      <label class="remarks">ເນື້ອໃນ</label>
+      <input type="text" class="form-control text-left" formControlName="remarks" required>
+    </div>
   </div>
 </form>
 <hr>
-<div class="row">
+<div class="row text-right">
   <div class="col col-md-12">
-    <button mat-flat-button color="primary" (click)="savePurchase()" [disabled]="btnDisabled">Save</button>
+    <button mat-button color="warn" (click)="dialogRef.close('cancel')" class="mr-2" style="width: 80px;"
+      [disabled]="btnDisabled">Cancel</button>
+    <button mat-flat-button color="warn" (click)="savePurchase()" style="width: 80px;"
+      [disabled]="btnDisabled">Save</button>
   </div>
 </div>
