--- a/src/app/pages/ingredients/ingredients.component.html
+++ b/src/app/pages/ingredients/ingredients.component.html
@@ -21,6 +21,9 @@
             routerLink="/ingredientPurchase">
             <mat-icon>shopping_cart</mat-icon>
           </button>
+          <button mat-fab color="primary" class="mr-2" style="background-color: #9C28B1" (click)="openAddRecipe()">
+            <mat-icon>bubble_chart</mat-icon>
+          </button>
         </div>
       </div>
     </div>
