--- a/src/app/dialogs/add-recipe/add-recipe.component.html
+++ b/src/app/dialogs/add-recipe/add-recipe.component.html
@@ -4,7 +4,7 @@
     <div class="form-row">
       <div class="form-group col-md-4">
         <label class="recipeName">ຊື່ອາຫານ</label>
-        <input type="text" class="form-control" id="recipeName" formControlName="recipeName" [disabled]="disabledText">
+        <input type="text" class="form-control" id="recipeName" formControlName="recipeName">
       </div>
       <div class="form-group col-md-4">
         <label class="foodIdType">ປະເພດອາຫານ</label>
@@ -25,7 +25,7 @@
       <div class="form-group col-md-4">
         <label class="subfoodId">ອາຫານຍ່ອຍ</label>
         <select class="form-control" id="subfoodId" formControlName="subfoodId">
-          <option value="">-- Non Subfood --</option>
+          <option value="0">-- Non Subfood --</option>
           <option value="{{ s.id }}" *ngFor="let s of subfoods">{{ s.subFoodName }}</option>
         </select>
       </div>
@@ -45,7 +45,7 @@
 
       <div class="col col-md-12 text-right">
         <button mat-flat-button color="primary" (click)="addIngredient()" class="mr-2">Add</button>
-        <button mat-flat-button color="warn">Create</button>
+        <button mat-flat-button color="warn" (click)="saveRecipe()">Create</button>
       </div>
 
     </div>
@@ -70,7 +70,8 @@
         <td class="text-center">{{ item.unitName }}</td>
         <td class="text-left">{{ item.remarks }}</td>
         <td class="text-center">
-          <i class="material-icons" style="cursor: pointer; color: #C60001;">delete_outline</i>
+          <i class="material-icons" style="cursor: pointer; color: #C60001;"
+            (click)="removeItem(item)">delete_outline</i>
         </td>
       </tr>
     </tbody>
