--- a/src/app/dialogs/add-recipe/add-recipe.component.html
+++ b/src/app/dialogs/add-recipe/add-recipe.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="recipeForm">
-  <h1 mat-dialog-title>ເພີ່ມລາຍການອາຫານ ກັບ ວັດຖຸດິບ</h1>
+  <h1 mat-dialog-title>ເພີ່ມລາຍການອາຫານ ກັບ ວັດຖຸດິບ (ຫົວໜ່ວຍເປັນ Gram)</h1>
   <div mat-dialog-content>
     <div class="form-row">
       <div class="form-group col-md-4">
