--- a/src/app/dialogs/view-ingredient-history/view-ingredient-history.component.html
+++ b/src/app/dialogs/view-ingredient-history/view-ingredient-history.component.html
@@ -2,7 +2,7 @@
   ລາຍການເຄື່ອນໄຫວຂອງ <span>{{ data.ingredientName }}</span>
 </p>
 <hr>
-<div class="table-responsive">
+<div class="table-responsive" style="max-height: 60vh;overflow: auto;">
   <table class="table table-bordered product_detail table-hover">
     <thead class="thead-dark">
       <tr>
