--- a/src/app/pages/ingredients/ingredients.component.html
+++ b/src/app/pages/ingredients/ingredients.component.html
@@ -5,11 +5,14 @@
     <mat-card-subtitle>ຈັດການສ່ວນປະກອບອາຫານທັງໝົດ</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <div class="row">
+    <div class="row" style="position: absolute;top:20px;right: 10px;">
       <div class="col col-md-12 col-sm-12" style="top: 10px;">
         <div class="text-right">
           <button mat-fab color="primary" class="mr-2" style="background-color: #00BFA5" (click)="openAddIngredient()">
             <mat-icon>add</mat-icon>
+          </button>
+          <button mat-fab color="primary" class="mr-2" style="background-color: #00BFA5" (click)="loadAllInit()">
+            <mat-icon>refresh</mat-icon>
           </button>
           <button mat-fab color="primary" class="mr-2" style="background-color: #9C28B1" (click)="openIngredientType()">
             <mat-icon>category</mat-icon>
@@ -39,10 +42,12 @@
                 <th scope="col" class="text-center">ຫົວໜ່ວຍ</th>
                 <th scope="col" class="text-center">ລາຄາຕໍ່ໜ່ວຍ</th>
                 <th scope="col" class="text-center">ຈຳນວນຕໍ່ໜ່ວຍ</th>
+                <th scope="col" class="text-center">ຈຳນວນ gram</th>
                 <th scope="col" class="text-center">ຈຳນວນຕໍ່ແກັດ</th>
                 <th scope="col" class="text-center">ລາຄາຕໍ່ແກັດ</th>
                 <th scope="col" class="text-center">ບັນຈຸ</th>
                 <th scope="col" class="text-center">ຈຳນວນປະຈຸບັນ</th>
+                <th scope="col" class="text-center">Gram</th>
                 <th scope="col" class="text-center">ວັນທີ່ສ້າງ</th>
                 <th scope="col" class="text-center">ໝາຍເຫດ</th>
                 <th scope="col" class="text-center">ນຳໃຊ້</th>
@@ -59,10 +64,15 @@
                 <td class="text-center">{{ item.unit_name }}</td>
                 <td class="text-right">{{ item.unitPrice | number }} ກີບ</td>
                 <td class="text-right">{{ item.quantityPerUnit | number }} {{ item.unit_name }}</td>
+                <td class="text-right"><span class="text-danger font-weight-bold">{{ item.grams | number }}</span>
+                  gram(s)</td>
                 <td class="text-right">{{ item.unitPerPack | number }} {{ item.packUnitName }}</td>
                 <td class="text-right">{{ item.packPrice | number }} ກີບ</td>
                 <td class="text-center">{{ item.packUnitName  }}</td>
                 <td class="text-right">{{ item.currentQuantity | number }} {{ item.unit_name }}</td>
+                <td class="text-right"><span
+                    class="text-danger font-weight-bold">{{ item.currentUnitGrams | number }}</span> gram(s)
+                </td>
                 <td class="text-center">{{ item.createdAt | date: 'dd-MMM-yyyy' }}</td>
                 <td class="text-left">{{ item.remarks }}</td>
                 <td class="text-center" *ngIf="item.enabled; else disabledItem">
@@ -110,6 +120,7 @@
                 <th scope="col" class="text-center">ຍອດຍົກມາ</th>
                 <th scope="col" class="text-center">ນຳໃຊ້</th>
                 <th scope="col" class="text-center">ຍອດໃນສາງປະຈຸບັນ</th>
+                <th scope="col" class="text-center">Gram(s)</th>
                 <th scope="col" class="text-center">ນຳໃຊ້ຈາກ</th>
                 <th scope="col" class="text-center">ວັນທີ່ປ່ຽນແປງ</th>
                 <th scope="col" class="text-center">ແກ້ໄຂໂດຍ</th>
@@ -124,6 +135,7 @@
                 <td class="text-right align-middle">{{ item.prevQuantity | number }} {{ item.unit_name }}</td>
                 <td class="text-right align-middle">{{ item.usedQuantiry | number }} {{ item.unit_name }}</td>
                 <td class="text-right align-middle">{{ item.currentQuantity | number }} {{ item.unit_name }}</td>
+                <td class="text-right align-middle">{{ item.currentQuantityGrams | number }} gram(s)</td>
                 <td class="text-left align-middle">{{ item.updateFrom }}</td>
                 <td class="text-left align-middle">{{ item.updatedAt | date: 'dd-MMM-yyyy HH:mm:ss' }}</td>
                 <td class="text-left align-middle">{{ item.username }}</td>
@@ -142,19 +154,71 @@
               <tr>
                 <th scope="col" class="text-center">#</th>
                 <th scope="col" class="text-center">recipe Name</th>
-                <th scope="col" class="text-center">ຍອດຍົກມາ</th>
+                <th scope="col" class="text-center">ອາຫານ</th>
+                <th scope="col" class="text-center">ອາຫານຍ່ອຍ</th>
+                <th scope="col" class="text-center">ຕົ້ນທຶນລວມ</th>
+                <th scope="col" class="text-center">ສ່ວນປະກອບອາຫານ</th>
                 <th scope="col" class="text-center">ນຳໃຊ້</th>
-                <th scope="col" class="text-center">ຍອດໃນສາງປະຈຸບັນ</th>
-                <th scope="col" class="text-center">ນຳໃຊ້ຈາກ</th>
+                <th scope="col" class="text-center">ຜູ້ສ້າງ</th>
                 <th scope="col" class="text-center">ວັນທີ່ປ່ຽນແປງ</th>
-                <th scope="col" class="text-center">ແກ້ໄຂໂດຍ</th>
-                <th scope="col" class="text-center">ຈັດການ</th>
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let r of recipesDisplay; let i = index">
+              <tr *ngFor="let r of recipesList; let i = index">
                 <td class="text-center align-middle">{{ i+1 }}</td>
-                <td class="text-left align-middle">{{ r.recipeName }}</td>
+                <td class="text-left align-middle">{{ r.recipeMaster.recipeName }}</td>
+                <td class="text-left align-middle">{{ r.recipeMaster.food_name }}</td>
+                <td class="text-left align-middle">{{ r.recipeMaster.subFoodName }}</td>
+                <td class="text-right align-middle">{{ r.recipeMaster.cost | number }}</td>
+                <td class="text-center align-top">
+                  <div class="table-responsive">
+                    <table class="table table-bordered product_detail table-hover">
+                      <thead class="thead-dark">
+                        <tr>
+                          <th scope="col" class="text-center">#</th>
+                          <th scope="col" class="text-center">ສ່ວນປະກອບ</th>
+                          <th scope="col" class="text-center">ຈຳນວນ</th>
+                          <th scope="col" class="text-center">ຫົວໜ່ວຍ</th>
+                          <th scope="col" class="text-center">ເນື້ອໃນ</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr *ngFor="let item of r.recipe;let j = index">
+                          <td class="text-center align-middle">{{ j+1 }}</td>
+                          <td class="text-left align-middle">{{ item.ingredientName }}</td>
+                          <td class="text-right align-middle">{{ item.quantity |number }}</td>
+                          <td class="text-center align-middle">{{ item.unit_name}}</td>
+                          <td class="text-left align-middle">{{ item.descriptions}}</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </td>
+                <td class="text-center align-middle" *ngIf="r.recipeMaster.enabled; else disabledItemR">
+                  <div class="cell text-center">
+                    <span>
+                      <i class="material-icons" style="color: #00BFA5;cursor: pointer;">
+                        check_circle
+                      </i>
+                    </span>
+                    <span class="ml-1">Active</span>
+                  </div>
+
+                </td>
+                <ng-template #disabledItemR>
+                  <td class="text-center align-middle">
+                    <div class="cell text-center">
+                      <span>
+                        <i class="material-icons" style="color: #C60001;cursor: pointer;">
+                          cancel
+                        </i>
+                      </span>
+                      <span class="ml-1">Deactive</span>
+                    </div>
+                  </td>
+                </ng-template>
+                <td class="text-left align-middle">{{ r.recipeMaster.username }}</td>
+                <td class="text-left align-middle">{{ r.recipeMaster.updatedAt | date:'dd-MMM-yyyy HH:mm:ss' }}</td>
               </tr>
             </tbody>
           </table>
