--- a/src/app/pages/ingredients/ingredients.component.html
+++ b/src/app/pages/ingredients/ingredients.component.html
@@ -227,7 +227,7 @@
           </table>
         </div>
       </mat-tab>
-      <mat-tab label="Ingredient Foods">
+      <mat-tab label="Ingredient Usage">
 
       </mat-tab>
     </mat-tab-group>
