--- a/src/app/dialogs/add-ingredient/add-ingredient.component.html
+++ b/src/app/dialogs/add-ingredient/add-ingredient.component.html
@@ -16,6 +16,11 @@
         </div>
       </div>
       <div class="form-row">
+        <div class="form-group col col-md-6">
+          <label for="quantityPerUnit">ຂະໜາດບັນຈຸ</label>
+          <input type="number" class="form-control text-right" id="quantityPerUnit" formControlName="quantityPerUnit"
+            required>
+        </div>
         <div class="form-group col-md-6">
           <label for="unitId">ຫົວໜ່ວຍ</label>
           <select class="form-control" id="unitId" formControlName="unitId" required>
@@ -23,41 +28,15 @@
             <option value="{{ t.id }}" *ngFor="let t of units">{{ t.unit_name }}</option>
           </select>
         </div>
-        <div class="form-group col col-md-6">
-          <label for="quantityPerUnit">ຈຳນວນຕໍ່ໜ່ວຍ</label>
-          <input type="number" class="form-control text-right" id="quantityPerUnit" formControlName="quantityPerUnit"
-            (keyup)="srcAmountChange()" required>
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="srcUnitPrice">ລາຄາຕໍ່ໜ່ວຍ</label>
-          <input type="number" class="form-control text-right" id="srcUnitPrice" formControlName="srcUnitPrice"
-            (keyup)="srcAmountChange()" required>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="srcUnitCurrCodeId">ສະກຸນເງິນ</label>
-          <select class="form-control" id="srcUnitCurrCodeId" formControlName="srcUnitCurrCodeId" required
-            (change)="changeCurrUnitPrice($event.target.value)">
-            <option value="">-- Choose --</option>
-            <option value="{{ c.id }}" *ngFor="let c of currencies">{{ c.currency_name }}</option>
-          </select>
-        </div>
+
       </div>
 
       <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="unitPrice">ລາຄາຕໍ່ໜ່ວຍ (ກິບ)</label>
-          <input type="number" class="form-control text-right" id="unitPrice" formControlName="unitPrice" required>
-        </div>
         <div class="form-group col col-md-6">
           <label for="unitPerPack">ຈຳນວນຕໍ່ແກັດ</label>
           <input type="number" class="form-control text-right" id="unitPerPack" formControlName="unitPerPack" required
             (keyup)="srcPackAmountChange()">
         </div>
-      </div>
-
-      <div class="form-row">
         <div class="form-group col col-md-6">
           <label for="packUnitId">ແພັກ</label>
           <select class="form-control" id="packUnitId" formControlName="packUnitId" required>
@@ -65,22 +44,7 @@
             <option value="{{ c.id }}" *ngFor="let c of packUnits">{{ c.packUnitName }}</option>
           </select>
         </div>
-        <div class="form-group col col-md-6">
-          <label for="srcPackPrice">ລາຄາຕໍ່ແກັດ</label>
-          <input type="number" class="form-control text-right" id="srcPackPrice" formControlName="srcPackPrice"
-            (keyup)="srcPackAmountChange()">
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="form-group col col-md-6">
-          <label for="packPrice">ລາຄາຕໍ່ແກັດ (ກີບ)</label>
-          <input type="number" class="form-control text-right" id="packPrice" formControlName="packPrice" required>
-        </div>
-        <div class="form-group col col-md-6">
-          <label for="currentQuantity">ຈຳນວນປະຈຸບັນ</label>
-          <input type="number" class="form-control text-right" id="currentQuantity" formControlName="currentQuantity"
-            required>
-        </div>
+
       </div>
       <div class="form-row">
         <div class="form-group col col-md-6">
