--- a/src/app/dialogs/add-recipe/add-recipe.component.html
+++ b/src/app/dialogs/add-recipe/add-recipe.component.html
@@ -45,7 +45,7 @@
 
       <div class="col col-md-12 text-right">
         <button mat-flat-button color="primary" (click)="addIngredient()" class="mr-2">Add</button>
-        <button mat-flat-button color="warn" (click)="saveRecipe()">Create</button>
+        <button mat-flat-button color="warn" (click)="saveRecipe()">{{ btnText }}</button>
       </div>
 
     </div>
