--- a/src/app/pages/kitchen-reports/kitchen-reports.component.html
+++ b/src/app/pages/kitchen-reports/kitchen-reports.component.html
@@ -28,6 +28,8 @@
               (click)="loadReportByRange()">Submit</button>
             <button mat-raised-button color="primary" class="ml-1" style="margin-top: 12px;width: 85px;"
               (click)="loadAllReports()">Reload</button>
+            <button mat-raised-button color="primary" class="ml-1" style="margin-top: 12px;width: 85px;"
+              routerLink="/stockReview" routerLinkActive="router-link-active">Review</button>
           </div>
         </div>
       </div>
