--- a/src/app/dialogs/ingredient-price-select/ingredient-price-select.component.html
+++ b/src/app/dialogs/ingredient-price-select/ingredient-price-select.component.html
@@ -3,7 +3,7 @@
 </p>
 <hr>
 <form [formGroup]="priceForm">
-  <div class="form-row">
+  <div class="form-row" style="max-height: 50vh;overflow: auto;">
     <div class="form-group col-md-4">
       <label class="srcUnitPrice">ລາຄາຕໍ່ໜ່ວຍ</label>
       <input type="number" class="form-control text-right" formControlName="srcUnitPrice"
