--- a/src/app/pages/ingredient-purchase/ingredient-purchase.component.html
+++ b/src/app/pages/ingredient-purchase/ingredient-purchase.component.html
@@ -7,7 +7,14 @@
   <div class="col col-md-5">
     <div class="card">
       <div class="card-header">
-        items
+        <div class="row">
+          <div class="col col-md-6">items</div>
+          <div class="col col-md-6 text-right">
+            <button mat-button color="warn" class="mr-2" (click)="openAddIngredient()">ເພິ່ມ
+            </button>
+          </div>
+        </div>
+
       </div>
       <div class="card-body">
         <div class="row" style="max-height: 72vh;overflow: auto;">
